--- a/src/Site/appsettings.json
+++ b/src/Site/appsettings.json
@@ -1,6 +1,6 @@
 {
   "mysqlconnection": {
-    "connectionString": "server=mysql;port=3306;userid=root;password=numsey;database=produtosdb;"
+    "connectionString": "server=mysql;port=3306;userid=root;password=root;database=produtosdb;"
 },
   "Logging": {
     "LogLevel": {
